<resources>
    <string name="app_name">Music Player</string>
    <string name="play_all">Play all</string>
    <string name="menu_home">Home</string>
    <string name="menu_all_songs">All Songs</string>
    <string name="todo">TODO</string>
    <string name="exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search_name">Search</string>
    <string name="songs">Songs</string>
    <string name="texttitle">Title</string>
    <string name="imageThumbnail">Thumbnail</string>
    <string name="textartist">Artist: </string>

    <string name="label_start_time">00:00</string>
    <string name="artist">Artists</string>
    <string name="About">About</string>
    <string name="music">Musics</string>
    <string name="todoNotification">TODO</string>
    <string name="artists">Artists</string>
    <string name="playlist">Playlist</string>
    <string name="information">Information</string>
</resources>