<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:layout_marginEnd="-65dp"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/layout_close"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/header"
            layout="@layout/layout_header_menu" />

        <TextView
            android:id="@+id/tv_menu_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="14dp"
            android:text="@string/menu_home"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_menu_all_songs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/menu_all_songs"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_close"
        android:layout_width="65dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="#66000000">

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:padding="12dp"
            android:src="@drawable/ic_close_white"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

</RelativeLayout>