<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/define_dimen_10"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:layout_marginEnd="@dimen/define_dimen_10"
        android:background="@color/white">

        <!--        <androidx.appcompat.widget.SearchView-->
        <!--            android:id="@+id/searchView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="@dimen/define_dimen_5"/>-->
        <EditText
            android:id="@+id/edt_search_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_shape_border_red_corner_8"
            android:hint="@string/hint_search_name"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="@dimen/define_dimen_12"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_xsmall"
            tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/define_dimen_35"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/img_search"
            android:background="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_5"
            android:src="@drawable/ic_search_red"
            tools:ignore="ContentDescription" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:focusable="auto"
            android:nestedScrollingEnabled="false"
            android:visibility="gone"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/define_dimen_5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ViewFlipper
                android:id="@+id/viewflipper"
                android:layout_width="match_parent"
                android:layout_height="211dp"
                android:layout_marginStart="@dimen/define_dimen_10"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:layout_marginEnd="@dimen/define_dimen_10">

            </ViewFlipper>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/define_dimen_10"
                android:layout_marginTop="@dimen/define_dimen_5"
                android:layout_marginEnd="@dimen/define_dimen_10"
                android:layout_marginBottom="@dimen/define_dimen_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/songs"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_size_normal"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layout_view_all_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/define_dimen_5"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:id="@+id/playall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play_all"
                        android:textColor="@color/purple_700" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/purple_700" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewpager_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/define_dimen_4"
                        android:layout_marginEnd="@dimen/define_dimen_10" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerListSongs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/define_dimen_10"
                    android:layout_marginBottom="@dimen/define_dimen_10"
                    android:focusable="false"
                    android:nestedScrollingEnabled="false"
                    tools:targetApi="lollipop" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>